# pics

./: .gitignore  CHANGELOG.md  server.conf
android/: .gitignore  Test-Android.ps1  diag.ps1  settings.gradle
android-client/: UX_DESIGN_SUMMARY.md  UX_REDESIGN_PLAN.md  UX_REDESIGN_WALKTHROUGH.md
android-client/app/: build.gradle
android-client/app/src/androidTest/java/com/photosync/android/: ExampleInstrumentedTest.kt
android-client/app/src/main/: AndroidManifest.xml
android-client/app/src/main/java/com/photosync/android/: MainActivity.kt
android-client/app/src/main/java/com/photosync/android/data/: ConnectionManager.kt  LocalDB.kt  MediaScanner.kt  PhotoMeta.kt  SettingsManager.kt
android-client/app/src/main/java/com/photosync/android/model/: FileMeta.kt  MediaItem.kt  SyncHistory.kt  SyncProgress.kt
android-client/app/src/main/java/com/photosync/android/network/: DiscoveryManager.kt  TcpSyncClient.kt  UdpDiscoveryListener.kt
android-client/app/src/main/java/com/photosync/android/repository/: MediaPagingSource.kt  MediaRepository.kt  PhotoRepository.kt  SyncRepository.kt
android-client/app/src/main/java/com/photosync/android/service/: ConnectionService.kt  EnhancedSyncService.kt  SyncService.kt
android-client/app/src/main/java/com/photosync/android/viewmodel/: DashboardViewModel.kt  GalleryViewModel.kt  HomeViewModel.kt  PairingViewModel.kt  SettingsViewModel.kt  SyncViewModel.kt
android-client/app/src/test/java/com/photosync/android/: ExampleUnitTest.kt
android-client/gradle/: libs.versions.toml
android/app/: build.gradle
android/app/src/androidTest/java/com/photosync/android/: PipelineInstrumentationTest.kt
android/app/src/androidTest/java/com/photosync/android/repository/: SyncProgressRepositoryTest.kt
android/app/src/androidTest/java/com/photosync/android/worker/: SyncWorkerTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/photosync/android/: MainActivity.kt  PhotoSyncApplication.kt
android/app/src/main/java/com/photosync/android/data/: AppDatabase.kt  Converters.kt  (+1 more)
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/tests/: verify_network_flap.md
dashboard/: package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx
dashboard/src/components/: Changes.tsx  ClientDetails.tsx  Clients.tsx  Dashboard.tsx  ErrorFeed.tsx  Errors.tsx  Integrity.tsx  LiveConnections.tsx  Login.tsx  MediaViewer.tsx  Pairing.tsx  Photos.tsx  Sessions.tsx  Settings.tsx  Storage.tsx  StorageOverview.tsx
dashboard/src/hooks/: useConnections.ts
dashboard/src/services/: api.ts
dashboard/src/theme/: theme.ts
desktop-server/: .gitignore  Build.ps1  CMakeLists.txt  Install-PhotoSync.ps1  Install.ps1  PhotoSync-Setup.iss  README.md  ReproCrash.ps1  TESTING.md  Test-MultipleClients.ps1  Verify-Discovery.ps1  repro_crash.py  server.conf  verify_discovery.py
desktop-server/src/: ApiServer.cpp  ApiServer.h  ApiServer_clients_impl.cpp  ApiServer_fix.cpp  ApiServer_health_impl.cpp  ApiServer_logs_impl.cpp  ApiServer_pairing_impl.cpp  ApiServer_storage_impl.cpp  ApiServer_thumbnails_impl.cpp  ConfigManager.cpp  ConfigManager.h  ConnectionManager.h  DatabaseManager.cpp  DatabaseManager.h  DatabaseManager_clients_impl.cpp  DatabaseManager_fix.cpp  DatabaseManager_pairing_impl.cpp  DatabaseManager_patch.cpp  DatabaseManager_storage_clean.cpp  DatabaseManager_storage_impl.cpp  FileManager.cpp  ProtocolParser.cpp  ProtocolParser.h  TcpListener.cpp  TcpListener.h  ThumbnailGenerator.cpp  UdpBroadcaster.cpp  main.cpp
desktop-server/test-client/: MockClient.cpp  validate_phase2.ps1
desktop-server/tests/: test_authentication.cpp  test_database_auth.cpp
desktop-server/ui-dashboard/: .gitignore  index.html  package-lock.json  package.json
desktop-server/ui-dashboard/src/: App.tsx  index.css  main.ts
desktop-server/ui-dashboard/src/components/: AuditLogs.tsx  Clients.tsx  Dashboard.tsx  LiveConnections.tsx  Pairing.tsx  Photos.tsx  ProtectedRoute.tsx  ServerHealth.tsx  Settings.tsx  ThumbnailRegenerator.tsx
desktop-server/ui-dashboard/src/contexts/: AuthContext.tsx
desktop-server/ui-dashboard/src/hooks/: useInfiniteScroll.ts
desktop-server/ui-dashboard/src/services/: api.ts
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PROCESS.md  REQUIREMENTS.md  TECHNICAL_CONTRACTS.md
docs/designs/: pairing_ux_plan.md
docs/notes/: README.md  authentication-implementation-history.md  future-enhancements.md
docs/requests/: 2025-12-08-android-client-core.md  2025-12-08-server-efficient-reconciliation.md  2025-12-11-ui-redesign.md
docs/templates/: FEATURE_REQUEST_TEMPLATE.md
server/: Build.ps1  CMakeLists.txt  GenerateCerts.ps1  INSTALL.md  Install.ps1  generate_cert.py  server.conf  server.crt  server.key  test_cpp.conf  test_integration.conf  test_integrity.conf
server/src/: ApiServer.cpp  ApiServer.h  ApiServer_thumbnails_impl.cpp  AuthenticationManager.cpp  AuthenticationManager.h  ConfigManager.cpp  ConfigManager.h  ConnectionManager.cpp  ConnectionManager.h  DatabaseManager.cpp  DatabaseManager.h  DatabaseManager_append.cpp  FileManager.cpp  FileManager.h  IntegrityScanner.cpp  IntegrityScanner.h  Logger.cpp  Logger.h  ProtocolParser.cpp  ProtocolParser.h  TcpListener.cpp  TcpListener.h  ThumbnailGenerator.h  UdpBroadcaster.cpp  UdpBroadcaster.h  exif.cpp  exif.h  main.cpp
server/test-client/: CMakeLists.txt  MockClientSSL.cpp
server/tests/: stress_test.ps1  test_api_integration.py  test_cpp_client.py  test_database_auth.cpp  test_database_core.cpp  test_database_edge.cpp  test_file_manager.cpp  test_main.cpp  test_protocol.cpp  test_protocol_edge.cpp  verify_changes.py  verify_changes_load.py  verify_changes_pagination.py  verify_full_matrix.py  verify_integrity.py  verify_integrity_integration.py  verify_phase6_api.py  verify_resumable_upload.py  verify_security.py  verify_tls.py
tests/: test_username_handshake.py
(+63 files in other folders)
